[package]
name = "protociolla"
version = "0.1.0"
authors = ["meh. <meh@schizofreni.co>"]
edition = "2018"

[dependencies]
futures = { package = "futures-preview", version = "= 0.3.0-alpha.18" }
tokio = { git = "https://github.com/tokio-rs/tokio.git" }
bytes = "0.4"

serde = { version = "1", features = ["derive"] }
msgpack = { package = "rmp-serde", version = "0.13", optional = true }

t1ha = "0.1"
